Scrollbar Fixed

--- a/app.css
+++ b/app.css
@@ -70,6 +70,11 @@ footer h2{
     font-weight: 300;
     font-size: 2rem;
 }
+
+.ff{
+    font-weight: 300;
+    font-size: 1.5rem;
+}
 footer svg{
     color: #283618;
 
